# entrackment

./: .gitignore  Caddyfile  Cargo.toml
openlibrsry/: Cargo.toml
openlibrsry/src/: lib.rs  olid.rs
openlibrsry/src/requests/: mod.rs  search.rs  works.rs
schema/: Cargo.toml
schema/src/: lib.rs
src/: getters.rs  main.rs  openlib.rs  posters.rs  schema.rs  setters.rs  tmdb.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  Trunk.toml  index.html  package-lock.json  package.json
web/public/: html-duration-picker.min.js
web/public/style/: theme.css
web/src/: App.svelte  api.rs  app.scss  components.rs  main.rs  stores.ts
web/src/components/: app_specific.rs  general.rs
web/src/components/app_specific/: add_movie_dialog.rs  create_tag_dialog.rs  filter_card.rs  movie_card.rs  movie_editor.rs  platform_chip.rs  search_movie_card.rs  tag_editor.rs
web/src/components/general/: card.rs  chip.rs  color_input.rs  common_dialog_pages.rs  date_input.rs  duration_input.rs  icon.rs  rating_input.rs
web/src/lib/: BookCard.svelte  BookEditor.svelte  BookFilter.svelte  Chip.svelte  ColorInput.svelte  Filter.svelte  MovieCard.svelte  MovieEditor.svelte  MovieFilter.svelte  NavBar.svelte  PlatformChip.svelte  RatingDisplay.svelte
web/src/lib/dialogs/: AddBookDialog.svelte  AddMovieDialog.svelte  EditBookDialog.svelte  EditMovieDialog.svelte  ErrorPage.svelte  LoadingPage.svelte  RatingsInfoDialog.svelte
web/src/lib/dialogs/add_book/: SearchCard.svelte
web/src/lib/dialogs/add_movie/: SearchCard.svelte
web/src/lib/dialogs/tag/: TagEditor.svelte
web/src/lib/filter/: PlatformsSelection.svelte  TagSelection.svelte
web/src/lib/movie_card/: BottomButtons.svelte  Platforms.svelte  Rating.svelte  ReleaseDate.svelte  Runtime.svelte  Tags.svelte
web/src/pages/: Books.svelte  Movies.svelte
web/src/theme/: _shared.scss  _smui-theme.scss
web/src/theme/dark/: _smui-theme.scss
