[workspace]
members = ["web", "schema"]

[package]
name = "watchlist"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
dotenvy = "0.15.7"
itertools = "0.11.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["fs", "sync"] }
schema = { path = "./schema" }
tmdb-api = "0.5.0"
rand = "0.8.5"
