[workspace]
members = ["openlibrsry"]

[package]
name = "entrackment"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
itertools = "0.13.0"
once_cell = "1.19.0"
openlibrsry = { version = "0.1.0", path = "./openlibrsry" }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde_with = "3.9.0"
strum = { version = "0.26.3", features = ["derive"] }
tmdb-api = "0.8.0"
tokio = { version = "1.39.2", features = ["fs", "sync"] }
