[package]
name = "openlibrsry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.20.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.9.0"
struct-field-names-as-array = "0.3.0"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
