[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
dioxus = "0.4.0"
dioxus-free-icons = { version = "0.7.0", features = ["material-design-icons-image", "material-design-icons-action", "material-design-icons-content", "material-design-icons-navigation", "font-awesome-brands"] }
humantime = "2.1.0"
itertools = "0.11.0"
material-dioxus = { version = "0.0.3-dev", features = ["full"] }
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
schema = { path = "../schema" }
serde = "1.0.188"
sir = { version = "0.4.0", features = ["dioxus"] }
strum = "0.25.0"
thiserror = "1.0.48"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-std = { version = "0.4.0", features = ["color_scheme"] }
web-sys = { version = "0.3.64", features = ["Window", "Location"] }
dioxus-web = "0.4.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dioxus-desktop = "0.4.0"
